sesiones/Sesion4-Kubernetes/Kubernetes II/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-world-ing
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: docker-hello-world-svc
              port:
                number: 8088
        - path: /app
          pathType: Prefix
          backend:
            service:
              name: hello-world-http-svc 
              port:
                number: 8089
        - path: /fake-service
          pathType: Prefix
          backend:
            service:
              name: fake-service-svc 
              port:
                number: 9090
